完成对Redis的测试